# sidg-2025-2

./: README.md
examples/kafka-wordcount-python/: README.md  app_word_count.py  counts.py  producer.py  pyproject.toml  word_count_consumer.py
