[project]
name = "producer-wordcount-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Francisco Dantas",email = "dantas.nobre@ifpb.edu.br"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "confluent-kafka (>=2.11.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "producer_wordcount_python", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
